# linear-regression1

./: README.md  data-fish.csv:Zone.Identifier  pyproject.toml  regression.ipynb
